--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,8 @@ on: [push]
 
 jobs:
   push_to_Docker_Hub:
-    # The type of runner that the job will run on
+
     runs-on: ubuntu-latest
-    # build docker image and push to docker hub
-    # only if the app build and test successfully
-    ## needs: [build_test]
 
     steps:
       - name: checkout repo
@@ -32,11 +29,11 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
 
-      - name: Run the image in a container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
-          run: |
-            echo "runing the docker image"
-            echo "Testing the nodejs  app endpoints"
-            echo ${{ steps.docker_build.outputs.digest }}
+      # - name: Run the image in a container
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
+      #     run: |
+      #       echo "runing the docker image"
+      #       echo "Testing the nodejs  app endpoints"
+      #       echo ${{ steps.docker_build.outputs.digest }}
