--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,13 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo2:latest
 
-      # - name: Run the image in a container
-      #   uses: addnab/docker-run-action@v3
-      #   with:
-      #     image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
-      #     run: |
-      #       echo "runing the docker image"
-      #       echo "Testing the nodejs  app endpoints"
-      #       echo ${{ steps.docker_build.outputs.digest }}
+      - name: Run the image in a container
+        uses: addnab/docker-run-action@v3
+        with:
+          image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo2:latest
+          run: |
+            echo "runing the docker image"
+            echo "Testing the nodejs  app endpoints"
+            echo ${{ steps.docker_build.outputs.digest }}
