--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,70 @@
+# on: [push]
+
+# jobs:
+#   push_to_Docker_Hub:
+
+#     runs-on: ubuntu-latest
+    
+#     steps:
+#       - name: checkout repo
+#         uses: actions/checkout@v2
+
+#       - name: Set up QEMU
+#         uses: docker/setup-qemu-action@v1
+
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
+
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+#       - name: Build and push
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: ./
+#           file: ./Dockerfile
+#           push: true
+#           tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
+
+      # - name: Run the image in a container
+      #   uses: addnab/docker-run-action@v3
+      #   with:
+      #     image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo:latest
+      #     run: |
+      #       echo "runing the docker image"
+      #       echo "Testing the nodejs  app endpoints"
+      #       echo ${{ steps.docker_build.outputs.digest }}
+
+
+name: Node CI
+
 on: [push]
 
 jobs:
-  push_to_Docker_Hub:
+  build:
 
     runs-on: ubuntu-latest
 
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push
-        uses: docker/build-push-action@v2
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo2:latest
-
-      - name: Run the image in a container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-demo2:latest
-          run: |
-            echo "runing the docker image"
-            echo "Testing the nodejs  app endpoints"
-            echo ${{ steps.docker_build.outputs.digest }}
+    - uses: actions/checkout@v1
+    - name: Install Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '10.x'
+    - name: Install npm dependencies
+      run: npm install
+    - name: Run build task
+      run: npm run build --if-present
+    - name: Deploy to Server
+      uses: easingthemes/ssh-deploy@main
+      env:
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          ARGS: "-rltgoDzvO --delete"
+          SOURCE: "dist/"
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: ${{ secrets.REMOTE_TARGET }}
+          EXCLUDE: "/dist/, /node_modules/"
